# test-workflow-python

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd-reusable-release.yaml  cd-reusable-webapp-deploy.yaml  cd.yaml  ci-cd.yaml  ci-reusable-checks.yaml  ci-reusable-docker.yaml  ci.yaml  ci.yml  cicd-reusable-docker.yaml
src/simple_api/: __init__.py  main.py
tests/: test_main.py
